2009-04-20  Christopher Bratusek <zanghar@freenet.de>
	* src/keys.c: - AltGR is not always Mod5

2009-04-14  Christopher Bratusek <zanghar@freenet.de>
	* src/keys.c : - added AltGR as synonyme for Mod5
	               - make sure we don't mix Super and Hyper [Denis Barbier]

2009-04-05  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/windows.jl: Make Sawfish more error-tolerant if an app has an icomplete WM_CLASS (Martin Mares)

	* src/events.c
	* src/windows.c: Fix for iconify issue (improved solution) [Teika]

	* CONTRIBUTING
	* man/news.texi: updated

	* man/news.texi: removed dupped entries, fixed typos

	* sounds/Makefile.in
	* po/Makefile.in	
	* src/Makefile.in: fix uninstall target

	* Makefile.in: uninstall all .desktop files

2009-04-04  Christopher Bratusek <zanghar@freenet.de>
	* BUGS
	* HACKING
	* THANKS
	* TREE: removed

	* CONTRIBUTING: the file replacing BUGS HACKING THANKS

	* README.IMPORTNAT: major update

	* README: updated

	* sawfish.ebuild.in
	* sawfish.spec.in: updated for doc file changes

2009-04-03  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/ext/window-history.jl: make window-history options appear in Sawfish-UI

	* man/news.texi: updated

2009-04-02  Christopher Bratusek <zanghar@freenet.de>
	* man/faq.texi: major update [Teika]

	* man/sawfish.texi: major update [Teika]
                            bump EDITION to 0.14
			    bump VERSION to 1.5.0
			    update UPDATED and UPDATE-MONTH

	* configure.in: don't run build-info

	* */ChangeLog: renamed to */ChangeLog.pre-1.5.0

2009-04-01  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/match-window.jl: move 'avoid' from placement to state [Teika]

	* lisp/sawfish/wm/state/maximize.jl: fixed position of a comment [Teika]

	* lisp/sawfish/wm/viewport.jl
	* lisp/sawfish/wm/focus.jl
	* lisp/sawfish/wm/windows.jl: replace several Wether by Whether [Teika]
