@@ -100,7 +100,10 @@
 		   (cons slot (table-ref dependence-table depends))))
 
       ;; create the widget
-      (let* ((callback (lambda () (slot-changed slot))))
+      (let* ((callback (lambda () (slot-changed slot)))
+	     (doc (if (or (null doc) (string= doc ""))
+		      doc
+		    (_ doc))))
 	(if (widget-accepts-doc-string-p (or (car type) type))
 	    (slot-widget-set slot (make-widget type callback doc))
 	  (slot-doc-set slot doc)
