@@ -49,6 +49,8 @@ To use the old style, put @code{(define-special-variable customize-program "sawf
 
 @item Fixed an "unknown remote error" that might appear [Alexey I. Froloff]
 
+@item Make Sawfish-UIs strings translatable [Alexey I. Froloff]
+
 @item Make "make uninstall" work again [Christopher Bratusek]
 
 @item Fixed the issue that apps did not start iconified, even if requested [Ian Zimmerman, Teika Kazura]
