@@ -1,3 +1,6 @@
+2009-05-03  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/ui/slot.jl: make defcustoms strings translatable [Alexey I. Froloff]
+
 2009-04-20  Christopher Bratusek <zanghar@freenet.de>
 	* src/keys.c: - AltGR is not always Mod5
 
